# citySim

./: .gitignore  .gitmodules  .graphify_ast.json  .graphify_detect.json  .graphify_uncached.txt  README.md  pyproject.toml
sim-city/: .env.example  README.md  package-lock.json  pyproject.toml
sim-city/.github/workflows/: ci.yml
sim-city/docs/: END_TO_END_HOWTO.md  phase_1_web3_identity.md
sim-city/scripts/: bootstrap_all_entities.py  bootstrap_ens_phase2.sh  bootstrap_everything.sh  find_treasury_index.py  phase8_benchmark.py  phase9_preflight.py
sim-city/src/citysim/: __init__.py  cli.py  env.py  store.py
sim-city/src/citysim/economy/: __init__.py  balances.py  distribute.py  salary.py
sim-city/src/citysim/interaction/: __init__.py  prompts.py  runner.py  scheduler.py  transport.py
sim-city/src/citysim/llm/: gateway.py
sim-city/src/citysim/product/: __init__.py  brief.py
sim-city/src/citysim/reporting/: __init__.py  summary.py
sim-city/src/citysim/server/: __init__.py  app.py  sim.py
sim-city/src/citysim/web3/: __init__.py  wallets.py
sim-city/src/citysim/world/: __init__.py  agents.py  establishments.py  grid.py  personas.py  schedule.py
sim-city/tests/: test_solar.py
sim-city/viewer/: index.html  tsconfig.json
sim-city/viewer/src/: App.tsx  main.tsx  styles.css
sim-city/viewer/src/components/: CityView.tsx  ConversationScene.tsx  DaySummaryModal.tsx  DialogueFeed.tsx  EnsLookupPanel.tsx  ProductSetup.tsx  RunReportModal.tsx  SidePanel.tsx  SimulationWizard.tsx  TimeControls.tsx
sim-city/viewer/src/hooks/: useSimStream.ts
(+103 files in other folders)
