[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citysim"
version = "0.1.0"
description = "Synthetic city simulator for product testing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Melbin", email = "melbin@devdock.ai" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=2.0",
    "typer>=0.13",
    "websockets>=13.0",
    "httpx>=0.27",
    "eth-account>=0.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.27",
]

[project.scripts]
citysim = "citysim.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["citysim"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
